[gd_scene load_steps=2 format=2]

[ext_resource path="res://Characters/Stats.gd" type="Script" id=1]

[node name="Stats" type="Node"]
script = ExtResource( 1 )

[node name="StaminaTween" type="Tween" parent="."]

[node name="StaminaTimer" type="Timer" parent="."]
one_shot = true

[connection signal="tween_step" from="StaminaTween" to="." method="_on_StaminaTween_tween_step"]
[connection signal="timeout" from="StaminaTimer" to="." method="_on_StaminaTimer_timeout"]
